fix horizontal scrollbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,7 @@
 
 html, body {
     height: 100%;
+    overflow-x: hidden;
 }
 .background-image {
     position: relative;
